# AML-3303

./: README.md  SDLC Principles Software Tools 2025.py
Predicting-Airbnb-Listing-Prices-with-MLflow-and-AWS-S3/: .gitignore  README.md  airbnb_complete_project.ipynb  main.py  model_comparison_results.csv  pyproject.toml
Predicting-Airbnb-Listing-Prices-with-MLflow-and-AWS-S3/mlruns/0/: meta.yaml
Predicting-Airbnb-Listing-Prices-with-MLflow-and-AWS-S3/mlruns/416135146092517914/: meta.yaml
Predicting-Airbnb-Listing-Prices-with-MLflow-and-AWS-S3/mlruns/416135146092517914/1c2f3c6a813a4b51b00d7ccc7cbfaac2/: meta.yaml
Predicting-Airbnb-Listing-Prices-with-MLflow-and-AWS-S3/mlruns/416135146092517914/1ce64300cc19445198c91fe76f589c39/: meta.yaml
Predicting-Airbnb-Listing-Prices-with-MLflow-and-AWS-S3/mlruns/416135146092517914/1d80de4c386c426ca8452bff2a1155d3/: meta.yaml
Predicting-Airbnb-Listing-Prices-with-MLflow-and-AWS-S3/mlruns/416135146092517914/435594594d8740d994551a44382d9907/: meta.yaml
Predicting-Airbnb-Listing-Prices-with-MLflow-and-AWS-S3/mlruns/416135146092517914/55e0c92464c14ed18af1d5059e168ae5/: meta.yaml
Predicting-Airbnb-Listing-Prices-with-MLflow-and-AWS-S3/mlruns/416135146092517914/5ff863af1f84492095307566f0ef71c5/: meta.yaml
Predicting-Airbnb-Listing-Prices-with-MLflow-and-AWS-S3/models/: best_model_xgboost.pkl
TechNova/: README.md  TechNova_Attrition_Prediction_C0950086.ipynb
ml-flow/: .gitignore  mlflow-example.py  (+3 more)
rag/: .gitignore  README.md  add_test_content.py  app.py  pyproject.toml  rag_engine.py  requirements.txt  test_rag.py
(+149 files in other folders)
