[project]
name = "predicting-airbnb-listing-prices-with-mlflow-and-aws-s3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.41.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.2",
]
